Animations of world texture properties invisible in anim editors #41527

Closed
opened 2014-08-21 16:55:46 +02:00 by Alexey · 7 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
Create a texture for world texture, set keyframe for any parameter in color or texture settings panel in world textures
context menu. look on dope sheet, graph editor.NLA editor, and we will not see it in this windows
But with animation in influence and mapping panels - working properly.
world_bug.png
Exact steps for others to reproduce the error
Open this{F106010}
1)and look on Dope sheet, NLA deitor and Graph editor(and we will not see all this actions in this windows)
2)try to create keyframe in influence or mapping window(i key) - we will see in all windows properly working

**System Information** windows7 64 ASUS ATI Radeon HD6870 **Blender Version** Broken: (All) Worked: (None) **Short description of error** Create a texture for world texture, set keyframe for any parameter in color or texture settings panel in world textures context menu. look on dope sheet, graph editor.NLA editor, and we will not see it in this windows But with animation in influence and mapping panels - working properly. ![world_bug.png](https://archive.blender.org/developer/F106008/world_bug.png) **Exact steps for others to reproduce the error** Open this{[F106010](https://archive.blender.org/developer/F106010/world_bug.blend)} 1)and look on Dope sheet, NLA deitor and Graph editor(and we will not see all this actions in this windows) 2)try to create keyframe in influence or mapping window(i key) - we will see in all windows properly working
Author

Changed status to: 'Open'

Changed status to: 'Open'
Alexey self-assigned this 2014-08-21 16:55:46 +02:00
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Alexey was unassigned by Bastien Montagne 2014-08-21 18:01:53 +02:00
Bastien Montagne changed title from World bug to Animations of world texture properties invisible in anim editors 2014-08-22 13:11:05 +02:00
Joshua Leung was assigned by Bastien Montagne 2014-08-22 13:11:05 +02:00

This issue was referenced by e6e78a143e

This issue was referenced by e6e78a143e0669a0da2c6ca2ae1d18f0f1c9caba
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit e6e78a143e.

Closed by commit e6e78a143e.

This issue was referenced by e2e69f6011705c02f9839a75823fc5f3a385ffb8

This issue was referenced by e2e69f6011705c02f9839a75823fc5f3a385ffb8

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41527
No description provided.