Bugfix T41527: Animations of world texture properties invisible in anim editors

Was caused by a typo - "items" was used in place of "tmp_items", causing animation
in the texture to get ignored if nothing else was present